--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -13,6 +13,8 @@ anyio==4.8.0
     #   httpx
     #   starlette
     #   watchfiles
+asgi-lifespan==2.1.0
+    # via -r requirements.in
 asyncpg==0.30.0
     # via -r requirements.in
 bcrypt==4.3.0
@@ -45,12 +47,16 @@ httpcore==1.0.7
 httptools==0.6.4
     # via uvicorn
 httpx==0.28.1
-    # via fastapi
+    # via
+    #   -r requirements.in
+    #   fastapi
 idna==3.10
     # via
     #   anyio
     #   email-validator
     #   httpx
+iniconfig==2.0.0
+    # via pytest
 jinja2==3.1.6
     # via fastapi
 markdown-it-py==3.0.0
@@ -59,6 +65,10 @@ markupsafe==3.0.2
     # via jinja2
 mdurl==0.1.2
     # via markdown-it-py
+packaging==24.2
+    # via pytest
+pluggy==1.5.0
+    # via pytest
 pydantic==2.10.6
     # via
     #   -r requirements.in
@@ -70,6 +80,12 @@ pydantic-settings==2.8.1
     # via -r requirements.in
 pygments==2.19.1
     # via rich
+pytest==8.3.5
+    # via
+    #   -r requirements.in
+    #   pytest-asyncio
+pytest-asyncio==0.25.3
+    # via -r requirements.in
 python-dotenv==1.0.1
     # via
     #   pydantic-settings
@@ -87,7 +103,9 @@ rich-toolkit==0.13.2
 shellingham==1.5.4
     # via typer
 sniffio==1.3.1
-    # via anyio
+    # via
+    #   anyio
+    #   asgi-lifespan
 sqlalchemy==2.0.38
     # via databases
 starlette==0.46.0
