--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,12 @@ services:
     image: postgres:17
     restart: always
     environment:
-      - POSTGRES_SERVER=${POSTGRES_SERVER}
       - POSTGRES_PORT=${POSTGRES_PORT}
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     networks:
       - custom-network
-    ports:
-      - "${POSTGRES_PORT}:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
@@ -34,8 +31,7 @@ services:
     networks:
       - custom-network
     ports:
-      - "${SMTP_PORT}:1025"
-      - "${SMTP_WEB_PORT}:1080"
+      - "${SMTP_WEB_PORT:-}:1080"
 
   api:
     build: ./api
@@ -50,9 +46,7 @@ services:
     networks:
       - custom-network
     ports:
-      - "${API_PORT}:80"
-    volumes:
-      - ./api/app:/app
+      - "${EXPOSED_API_PORT:-}:80"
 
 networks:
   custom-network:
