Add README instructions and .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,18 @@
 # Project
-PROJECT_NAME="User Registration API"
-ENVIRONMENT=example
-RUN_TESTS=false
+PROJECT_NAME="User Registration API"  # <-- customize the name of the project
+ENVIRONMENT=example  # <-- customize the name of the environment
+RUN_TESTS=false  # <-- set to 'true' to run the tests instead of the API (explained later)
 
 # Docker
-EXPOSED_API_PORT=8000
-EXPOSED_SMTP_WEB_PORT=1025
+EXPOSED_API_PORT=8000  # <-- change this to specify the port for the web access to the API on the host
+EXPOSED_SMTP_WEB_PORT=1025  # <-- change this to specify the port for the web access to the MAIL service on the host
 
 # Postgres
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=user_registration
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=changethis
+POSTGRES_PASSWORD=changethis  # <-- change this for better security
 
 # API
 DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT}/${POSTGRES_DB}
@@ -21,4 +21,4 @@ DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT
 SMTP_PORT=1025
 SMTP_WEB_PORT=1080
 SMTP_USER=admin
-SMTP_PASSWORD=changethis
+SMTP_PASSWORD=changethis  # <-- change this for better security
