--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     networks:
       - custom-network
     ports:
-      - "${SMTP_WEB_PORT:-}:1080"
+      - "${EXPOSED_SMTP_WEB_PORT:-}:1080"
 
   api:
     build: ./api
