Rename env var suffix "PASSWORD" -> "PASS"

--- a/.env.example
+++ b/.env.example
@@ -12,13 +12,13 @@ POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=user_registration
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=changethis  # <-- change this for better security
+POSTGRES_PASS=changethis  # <-- change this for better security
 
 # API
-DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT}/${POSTGRES_DB}
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASS}@db:${POSTGRES_PORT}/${POSTGRES_DB}
 
 # SMTP
 SMTP_PORT=1025
 SMTP_WEB_PORT=1080
 SMTP_USER=admin
-SMTP_PASSWORD=changethis  # <-- change this for better security
+SMTP_PASS=changethis  # <-- change this for better security
