--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - POSTGRES_PORT=${POSTGRES_PORT}
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_PASSWORD=${POSTGRES_PASS}
     networks:
       - custom-network
     volumes:
@@ -31,7 +31,7 @@ services:
     restart: always
     environment:
       - MAILDEV_INCOMING_USER=${SMTP_USER}
-      - MAILDEV_INCOMING_PASS=${SMTP_PASSWORD}
+      - MAILDEV_INCOMING_PASS=${SMTP_PASS}
     networks:
       - custom-network
     ports:
