--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.11
 
-WORKDIR /app
+WORKDIR /src
 COPY ./requirements.txt /requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /requirements.txt
-COPY ./app /app
+COPY src /src
 
 RUN chmod +x ./start.sh
 CMD ["/bin/bash", "start.sh"]
