Integrate RabbitMQ + Celery for mailing and split config into per-service settings

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,12 @@ SMTP_PORT=1025
 SMTP_WEB_PORT=1080
 SMTP_USER=admin
 SMTP_PASS=changethis  # <-- change this for better security
+
+# RABBITMQ
+RABBITMQ_NODE_PORT=5672
+RABBITMQ_USER=admin
+RABBITMQ_PASS=changethis  # <-- change this for better security
+
+# CELERY
+CELERY_BROKER_URL=amqp://${RABBITMQ_USER}:${RABBITMQ_PASS}@rabbitmq:${RABBITMQ_NODE_PORT}//
+CELERY_RESULT_BACKEND=rpc://
