Fix dependencies, env vars usage, simplify mail sending function

--- a/.env.example
+++ b/.env.example
@@ -8,20 +8,22 @@ EXPOSED_API_PORT=8000  # <-- change this to specify the port for the web access 
 EXPOSED_SMTP_WEB_PORT=1080  # <-- change this to specify the port for the web access to the MAIL service on the host
 
 # Postgres
-POSTGRES_SERVER=localhost
+POSTGRES_SERVER=db
 POSTGRES_PORT=5432
 POSTGRES_DB=user_registration
 POSTGRES_USER=postgres
 POSTGRES_PASS=changethis  # <-- change this for better security
 
 # API
-DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASS}@db:${POSTGRES_PORT}/${POSTGRES_DB}
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASS}@${POSTGRES_SERVER}:${POSTGRES_PORT}/${POSTGRES_DB}
 
 # SMTP
+SMTP_SERVER=mail
 SMTP_PORT=1025
 SMTP_WEB_PORT=1080
 SMTP_USER=admin
 SMTP_PASS=changethis  # <-- change this for better security
+SMTP_SENDER=registration@example.com  # <-- change this for better security
 
 # RABBITMQ
 RABBITMQ_NODE_PORT=5672
