--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,5 +5,4 @@ COPY ./requirements.txt /requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /requirements.txt
 COPY src /src
 
-RUN chmod +x ./start.sh
-CMD ["/bin/bash", "start.sh"]
+CMD ["fastapi", "run", "main.py", "--port", "80"]
